changes for dashbuilder release DSL scripts (#336)